[package]
name = "tls-xb"
authors = ["Yiheng He <yiheng.he@proton.me>"]
license = "GPL-3.0"
description = "tls-xb is a cli tool that fetches scores and GPA from https://tsinglanstudent.schoolis.cn"
homepage = "https://github.com/hey2022/tls-xb"
repository = "https://github.com/hey2022/tls-xb"
documentation = "https://github.com/hey2022/tls-xb"
keywords = ["cli"]
categories = ["command-line-interface"]
version = "0.3.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
confy = "0.6.0"
futures = "0.3.30"
image = "0.24.9"
itertools = "0.12.1"
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tabled = { version = "0.15", features = ["ansi"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
viuer = "0.7.1"
