[package]
name = "tls-xb"
authors = ["Yiheng He <yiheng.he@proton.me>"]
license = "GPL-3.0"
description = "tls-xb is a cli tool that fetches scores and GPA from https://tsinglanstudent.schoolis.cn"
homepage = "https://github.com/hey2022/tls-xb"
repository = "https://github.com/hey2022/tls-xb"
documentation = "https://github.com/hey2022/tls-xb"
keywords = ["cli"]
categories = ["command-line-interface"]
version = "0.4.1"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "48FD9800-A2AC-4FE4-92F7-4AE2F3DDE16E"
path-guid = "73D0D0BE-E1CF-47BF-A9FA-B91C1005AE7B"
license = false
eula = false

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colored = "3.0.0"
confy = "0.6.1"
env_logger = "0.11.5"
futures = "0.3.31"
icalendar = "0.16.13"
image = { version = "0.25.5", default-features = false, features = ["rayon", "png"]}
itertools = "0.13.0"
log = "0.4.22"
md5 = "0.7.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tabled = { version = "0.17", features = ["ansi"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
viuer = { version = "0.9.1" }

[features]
sixel = ["viuer/sixel"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
